--- a/my-resume/.github/workflows/node.js.yml
+++ b/my-resume/.github/workflows/node.js.yml
@@ -25,6 +25,8 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
-      - run: cd ../my-resume
-      - run: npm ci
-      - run: npm start
+      - name: Install dependencies and start the app
+        working-directory: my-resume
+        run: |
+          npm ci
+          npm start
