--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,7 +26,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
       - name: Install dependencies and start the app
-        working-directory: cd my-resume
+        working-directory: my-resume
         run: |
           npm ci
           npm start
