--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,6 +25,12 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
+      - name: List directory contents
+        run: |
+          echo "Contents of repository root directory:"
+          ls -al
+          echo "Contents of my-resume directory:"
+          ls -al my-resume
       - name: Install dependencies and start the app
         working-directory: my-resume
         run: |
