--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,7 +25,6 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
-          working-directory: my-resume
       - name: List directory contents
         run: |
           echo "Contents of repository root directory:"
@@ -33,7 +32,7 @@ jobs:
           echo "Contents of my-resume directory:"
           ls -al my-resume
       - name: Install dependencies and start the app
-        working-directory: my-resume
+        working-directory: my_resume/my-resume
         run: |
           npm ci
           npm start
