--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,19 +20,19 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node-version }}
-          cache: "npm"
       - name: List directory contents
         run: |
           echo "Contents of repository root directory:"
           ls -al
           echo "Contents of my-resume directory:"
           ls -al my-resume
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: "npm"
       - name: Install dependencies and start the app
-        working-directory: my_resume/my-resume
+        working-directory: my-resume
         run: |
           npm ci
           npm start
